--- a/.github/workflows/release-dry-run.yaml
+++ b/.github/workflows/release-dry-run.yaml
@@ -32,7 +32,7 @@ jobs:
       - name: prepare environment
         run: |
           Write-Host "Using PowerShell v$($PSVersionTable.PSVersion.ToString())"
-          Install-Module @('psake') -Force
+          Install-Module @('psake') -Force -Verbose
 
       - name: create package
         run: Invoke-psake -taskList clean,build; exit (!$psake.build_success)
