--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -4,10 +4,12 @@ name: CI
 
 # Controls when the workflow will run
 on:
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-concurrency: main
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
 
 # target powershell 5.1
 defaults:
